# lattice

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  justfile  lattice_demo_failures.db  lattice_demo_runs.db  lattice_runs.db  pyproject.toml
.github/scripts/: test_summary.py
.github/workflows/: ci.yml  publish.yml  release-please.yml  sync-develop.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-streaming-infrastructure-and-websocket/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md
.planning/phases/02-asset-live-monitoring-page/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-main-graph-window-integration/: 03-01-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: core_architecture.md  deployment.md  web_architecture.md
examples/: sample_manifest.json  simple_pipeline.py  web_demo.py  web_demo_failures.py  web_demo_lite.py
src/lattice/: __init__.py  asset.py  cli.py  config.py  executor.py  graph.py  models.py  plan.py  registry.py
tests/: conftest.py  test_asset.py  test_cli.py  test_config.py  test_executor.py  test_graph.py  test_io.py  test_plan.py  test_web.py
tests/test_dbt/: __init__.py  conftest.py  test_assets.py  test_manifest.py  test_models.py  test_web_integration.py
tests/test_observability/: __init__.py  test_checks.py  test_history_sqlite.py  test_integration.py  test_lineage.py  test_log_capture.py  test_models.py
(+85 files in other folders)
