    [project]
name = "lattice"
version = "0.5.0"
description = "An asset-centric orchestration framework"
readme = "README.md"
authors = [
    { name = "Jonathan Cook", email = "jon.a.cook7@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "polars>=1.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
]

[project.scripts]
lattice = "lattice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "hypothesis>=6.151.2",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
